Fixed Modal on smaller screens

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -19,6 +19,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1010;
+    max-height: 100vh;
+    overflow: auto;
 
     background-color: var(--primary-light);
 
