--- a/src/components/modal/modals/welcome-modal/welcome-modal.scss
+++ b/src/components/modal/modals/welcome-modal/welcome-modal.scss
@@ -32,6 +32,7 @@
     #chip {
         grid-area: chip;
         justify-self: center;
+        max-width: 100%;
     }
 
     #toolbar {
